--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -382,7 +382,7 @@ label {
       grid-template-columns: max-content minmax(100px, auto) minmax(auto, 5fr);
   border: 4vw solid black;
   border-left: 0;
-  background-color: white;
+  background-color: black;
 }
 
 .imageSelect-container {
@@ -395,10 +395,11 @@ label {
   -ms-grid-columns: (minmax(0, 300px))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(0, 300px));
   overflow-x: hidden;
-  background-color: white;
+  background-color: black;
 }
 
 .enlargeContainer {
+  position: relative;
   width: 100%;
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
@@ -410,9 +411,7 @@ label {
       -ms-flex-align: center;
           align-items: center;
   overflow: hidden;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  background-color: white;
+  background-color: black;
   cursor: pointer;
 }
 
@@ -441,7 +440,8 @@ label {
   cursor: pointer;
 }
 
-.imageSelect-Enlarge {
+.enlarge-container {
+  position: absolute;
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
   z-index: -1;
@@ -450,6 +450,32 @@ label {
      object-fit: contain;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.enlarge-preview {
+  position: absolute;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+  z-index: -1;
+  max-width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .imageSelect-FilePreview {
@@ -525,8 +551,6 @@ label {
 }
 
 .FamilyNext {
-  background: #4FDA0A;
-  background: #4fda0a;
   width: 21px;
   height: 30px;
 }
@@ -566,5 +590,101 @@ label {
 .title-letter {
   -webkit-transform: scale(1.65, 2.5);
           transform: scale(1.65, 2.5);
+}
+
+#foreground {
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+}
+
+#background {
+  z-index: 1;
+}
+
+@-webkit-keyframes move-right {
+  0% {
+    right: 100%;
+  }
+  100% {
+    right: 0;
+  }
+}
+
+@keyframes move-right {
+  0% {
+    right: 100%;
+  }
+  100% {
+    right: 0;
+  }
+}
+
+.move-right {
+  -webkit-animation-name: move-right;
+          animation-name: move-right;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-timing-function: steps(3, end);
+          animation-timing-function: steps(3, end);
+}
+
+@-webkit-keyframes move-left {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes move-left {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+.move-left {
+  -webkit-animation-name: move-left;
+          animation-name: move-left;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-timing-function: steps(3, end);
+          animation-timing-function: steps(3, end);
+}
+
+@-webkit-keyframes foreground-shrink {
+  0% {
+    height: 100%;
+    width: 100%;
+  }
+  100% {
+    height: 0;
+    width: 100%;
+  }
+}
+
+@keyframes foreground-shrink {
+  0% {
+    height: 100%;
+    width: 100%;
+  }
+  100% {
+    height: 0;
+    width: 100%;
+  }
+}
+
+.foreground-shrink {
+  -webkit-animation-name: foreground-shrink;
+          animation-name: foreground-shrink;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-timing-function: steps(3, end);
+          animation-timing-function: steps(3, end);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 /*# sourceMappingURL=main.css.map */
