--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -238,7 +238,7 @@ label{
 //TAGS MENU
 //------------
 $frame-color: black;
-$background-color: white;
+$background-color: black;
 
 .TagsMenu-container{
     width: 250px;
@@ -283,13 +283,13 @@ $background-color: white;
     background-color: $background-color;
 }
 .enlargeContainer{
+    position: relative;
     width: 100%;
     transition: 0.4s all;
     justify-self: end;
     display: flex;
     align-items: center;
     overflow: hidden;
-    transform: translateX(100%);
     background-color: $background-color;
     cursor: pointer;
 }
@@ -306,13 +306,27 @@ $background-color: white;
     max-height: 25vh;
     cursor: pointer;
 }
-.imageSelect-Enlarge{
+.enlarge-container{
+    position: absolute;
     transition: 0.4s all;
     z-index: -1;
     max-width: 100%;
     object-fit: contain;
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.enlarge-preview{
+    position: absolute;
+    transition: 0.4s all;
+    z-index: -1;
+    max-width: 100%;
+    object-fit: contain;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
 .imageSelect-FilePreview{
 
@@ -354,8 +368,8 @@ $background-color: white;
 
 
 .FamilyNext{
-  background : #4FDA0A;
-  background : rgba(79, 218, 10, 1);
+//   background : #4FDA0A;
+//   background : rgba(79, 218, 10, 1);
   width : 21px;
   height : 30px;
 }
@@ -388,4 +402,57 @@ $background-color: white;
 .title-letter{
     // font-size: 60px;
     transform: scale(1.65, 2.5);
+}
+
+#foreground{
+    transition: 0.4s all;
+    // z-index: 9999;
+    // mix-blend-mode: screen;
+}
+#background{
+    // background-color: limegreen;
+    z-index: 1;
+    // right: 100%;
+}
+@keyframes move-right{
+    0% {
+        right: 100%;
+    }
+    100% {
+        right: 0;
+    }
+}
+.move-right{
+    animation-name: move-right;
+    animation-duration: 0.2s;
+    animation-timing-function: steps(3, end)
+}
+@keyframes move-left{
+    0% {
+        left: 100%;
+    }
+    100% {
+        left: 0;
+    }
+}
+.move-left{
+    animation-name: move-left;
+    animation-duration: 0.2s;
+    animation-timing-function: steps(3, end)
+}
+@keyframes foreground-shrink{
+    0% {
+        height: 100%;
+        width: 100%;
+    }
+    100% {
+        height: 0;
+        width: 100%;
+    }
+}
+.foreground-shrink{
+    animation-name: foreground-shrink;
+    animation-duration: 0.2s;
+    animation-timing-function: steps(3, end);
+    animation-fill-mode: forwards;
 }
