--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -345,11 +345,11 @@ label {
 
 .TagsMenu-container {
   width: 250px;
-  background-color: black;
+  background-color: #ff8dff;
 }
 
 .TagsMenu-Card {
-  background-color: black !important;
+  background-color: #ff8dff !important;
 }
 
 .tagsMenu-Button_category {
@@ -369,7 +369,7 @@ label {
 }
 
 .NavBar {
-  background-color: black;
+  background-color: #ff8dff;
 }
 
 .frontEndIndex-container {
@@ -380,9 +380,9 @@ label {
   -ms-grid-columns: max-content minmax(100px, auto) minmax(auto, 5fr);
       grid-template-columns: -webkit-max-content minmax(100px, auto) minmax(auto, 5fr);
       grid-template-columns: max-content minmax(100px, auto) minmax(auto, 5fr);
-  border: 4vw solid black;
+  border: 4vw solid #ff8dff;
   border-left: 0;
-  background-color: black;
+  background-color: #4d2a0d;
 }
 
 .imageSelect-container {
@@ -395,7 +395,7 @@ label {
   -ms-grid-columns: (minmax(0, 300px))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(0, 300px));
   overflow-x: hidden;
-  background-color: black;
+  background-color: #4d2a0d;
 }
 
 .enlargeContainer {
@@ -411,7 +411,7 @@ label {
       -ms-flex-align: center;
           align-items: center;
   overflow: hidden;
-  background-color: black;
+  background-color: #4d2a0d;
   cursor: pointer;
 }
 
@@ -466,16 +466,15 @@ label {
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
   z-index: -1;
-  max-width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 100%;
 }
 
 .imageSelect-FilePreview {
@@ -686,5 +685,48 @@ label {
           animation-timing-function: steps(3, end);
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
+}
+
+.ArtworkInfo-container {
+  position: absolute;
+  left: 0;
+  background-color: white;
+  bottom: -100%;
+  height: 80%;
+  width: 100%;
+  z-index: 2;
+  bottom: 0;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+}
+
+.ArtworkInfo-preview-container {
+  max-height: 100%;
+  border: 1px solid;
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.ArtworkInfo-preview {
+  border: 1px solid;
+  height: 100%;
+}
+
+.ArtworkInfo-seeAlso-container {
+  height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  widows: 100%;
+}
+
+.info-up {
+  bottom: 0;
+}
+
+.info-down {
+  bottom: -100%;
 }
 /*# sourceMappingURL=main.css.map */
