--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -237,8 +237,8 @@ label{
 //------------
 //TAGS MENU
 //------------
-$frame-color: black;
-$background-color: black;
+$frame-color: rgb(255, 141, 255);
+$background-color: rgb(77, 42, 13);
 
 .TagsMenu-container{
     width: 250px;
@@ -322,11 +322,10 @@ $background-color: black;
     position: absolute;
     transition: 0.4s all;
     z-index: -1;
-    max-width: 100%;
     object-fit: contain;
-    width: 100%;
     display: flex;
     align-items: center;
+    height: 100%;
 }
 .imageSelect-FilePreview{
 
@@ -455,4 +454,46 @@ $background-color: black;
     animation-duration: 0.2s;
     animation-timing-function: steps(3, end);
     animation-fill-mode: forwards;
+}
+.ArtworkInfo-container{
+    position: absolute;
+
+    left: 0;
+    
+    background-color:
+    white;
+    
+    bottom: -100%;
+    
+    height: 80%;
+    
+    width: 100%;
+    
+    z-index: 2;
+    
+    bottom: 0;
+    
+    transition: 0.4s all;
+}
+.ArtworkInfo-preview-container{
+    max-height: 100%;
+    border: 1px solid;
+    height: 100%;
+    flex: 1;
+}
+.ArtworkInfo-preview{
+    border: 1px solid;
+    height: 100%;
+}
+.ArtworkInfo-seeAlso-container{
+    height: 50%;
+    display: flex;
+    widows: 100%;
+}
+
+.info-up{
+    bottom: 0;
+}
+.info-down{
+    bottom: -100%;
 }
