--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -269,21 +269,21 @@ $background-color: rgb(77, 42, 13);
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: max-content minmax(100px, auto) minmax(auto, 5fr);
-    border: 4vw solid $frame-color;
+    grid-template-columns: max-content minmax(100px, auto) minmax(auto, 5fr) 50px;
+    // border: 4vw solid $frame-color;
+    border: 8px solid $frame-color;
     border-left: 0;
     background-color: $background-color;
+    position: relative;
 }
 .imageSelect-container{
-    display: flex;
-    flex-wrap: wrap;
     overflow-y: auto;
-    grid-template-columns: repeat( auto-fit, minmax(0, 300px) );
     overflow-x: hidden;
     background-color: $background-color;
 }
 .enlargeContainer{
-    position: relative;
+    position: absolute;
+    height: 100%;
     width: 100%;
     transition: 0.4s all;
     justify-self: end;
@@ -292,6 +292,8 @@ $background-color: rgb(77, 42, 13);
     overflow: hidden;
     background-color: $background-color;
     cursor: pointer;
+    grid-column-start: 3;
+    grid-column-end: 4;
 }
 .ImagesPreview--imageContainer{
     display: flex;
@@ -301,10 +303,13 @@ $background-color: rgb(77, 42, 13);
     transition: 0.4s all;
     transition: 0 opacity;
     z-index: 2;
-    max-width: 100%;
+    // max-width: 100%;
     overflow: hidden;
-    max-height: 25vh;
+    max-height: 200px;
     cursor: pointer;
+    position: sticky;
+    top: 0;
+    bottom: 0;
 }
 .enlarge-container{
     position: absolute;
@@ -326,11 +331,12 @@ $background-color: rgb(77, 42, 13);
     display: flex;
     align-items: center;
     height: 100%;
+    max-width: 100%;
 }
 .imageSelect-FilePreview{
 
     transition: 0.4s all;
-    z-index: -1;
+    // z-index: -1;
     max-width: 100%;
     object-fit: contain;
     align-self: flex-end;
@@ -423,8 +429,9 @@ $background-color: rgb(77, 42, 13);
 }
 .move-right{
     animation-name: move-right;
-    animation-duration: 0.2s;
-    animation-timing-function: steps(3, end)
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    // animation-timing-function: steps(3, end);
 }
 @keyframes move-left{
     0% {
@@ -437,7 +444,8 @@ $background-color: rgb(77, 42, 13);
 .move-left{
     animation-name: move-left;
     animation-duration: 0.2s;
-    animation-timing-function: steps(3, end)
+    animation-timing-function: ease-out;
+    // animation-timing-function: steps(3, end);
 }
 @keyframes foreground-shrink{
     0% {
@@ -450,30 +458,22 @@ $background-color: rgb(77, 42, 13);
     }
 }
 .foreground-shrink{
-    animation-name: foreground-shrink;
+    // animation-name: foreground-shrink;
     animation-duration: 0.2s;
-    animation-timing-function: steps(3, end);
+    animation-timing-function: ease-out;
+    // animation-timing-function: steps(3, end);
     animation-fill-mode: forwards;
 }
 .ArtworkInfo-container{
     position: absolute;
-
     left: 0;
-    
-    background-color:
-    white;
-    
+    background-color: white;
     bottom: -100%;
-    
     height: 80%;
-    
     width: 100%;
-    
     z-index: 2;
-    
-    bottom: 0;
-    
     transition: 0.4s all;
+    opacity: 0;
 }
 .ArtworkInfo-preview-container{
     max-height: 100%;
@@ -488,10 +488,11 @@ $background-color: rgb(77, 42, 13);
 .ArtworkInfo-seeAlso-container{
     height: 50%;
     display: flex;
-    widows: 100%;
+    width: 100%;
 }
 
 .info-up{
+    opacity: 1;
     bottom: 0;
 }
 .info-down{
