--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -411,6 +411,11 @@ label {
   -ms-grid-column: 3;
       grid-column-start: 3;
   grid-column-end: 4;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  align-items: center;
 }
 
 .ImagesPreview--imageContainer {
@@ -467,15 +472,12 @@ label {
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
   z-index: -1;
-  -o-object-fit: contain;
-     object-fit: contain;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100%;
   max-width: 100%;
 }
 
@@ -595,10 +597,26 @@ label {
 #foreground {
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
+  z-index: 2;
+  opacity: 0.5;
 }
 
 #background {
   z-index: 1;
+  border: 2px solid white;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  z-index: 1;
+}
+
+.background-image {
+  -o-object-fit: none;
+     object-fit: none;
+  border: 2px solid yellow;
+}
+
+.foreground-iamge {
+  border: 2px solid blue;
 }
 
 @-webkit-keyframes move-right {
@@ -703,9 +721,9 @@ label {
   max-height: 100%;
   border: 1px solid;
   height: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50px;
+          flex: 0 0 50px;
 }
 
 .ArtworkInfo-preview {
@@ -714,7 +732,7 @@ label {
 }
 
 .ArtworkInfo-seeAlso-container {
-  height: 50%;
+  height: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
