--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -417,6 +417,7 @@ $background-color: rgb(77, 42, 13);
     opacity: 0.5;
     // z-index: 9999;
     // mix-blend-mode: screen;
+    width: auto !important;
 }
 #background{
     // background-color: limegreen;
