reformat FrontIndex/FilePreview, Enlarge compoennts

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -377,9 +377,9 @@ label {
   width: 100vw;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: max-content minmax(100px, auto) minmax(auto, 5fr) 50px;
-      grid-template-columns: -webkit-max-content minmax(100px, auto) minmax(auto, 5fr) 50px;
-      grid-template-columns: max-content minmax(100px, auto) minmax(auto, 5fr) 50px;
+  -ms-grid-columns: min-content minmax(120px, 1fr) minmax(0, min-content) 75px;
+      grid-template-columns: -webkit-min-content minmax(120px, 1fr) minmax(0, -webkit-min-content) 75px;
+      grid-template-columns: min-content minmax(120px, 1fr) minmax(0, min-content) 75px;
   border: 8px solid #ff8dff;
   border-left: 0;
   background-color: #4d2a0d;
@@ -393,29 +393,23 @@ label {
 }
 
 .enlargeContainer {
-  position: absolute;
+  -ms-grid-column: 3;
+      grid-column-start: 3;
+  grid-column-end: 4;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
   height: 100%;
-  width: 100%;
-  -webkit-transition: 0.4s all;
-  transition: 0.4s all;
-  justify-self: end;
+  max-height: calc(100vh - 10px);
+  width: 0;
+  overflow-x: hidden;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  overflow: hidden;
-  background-color: #4d2a0d;
-  cursor: pointer;
-  -ms-grid-column: 3;
-      grid-column-start: 3;
-  grid-column-end: 4;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  align-items: center;
+  max-width: 100%;
 }
 
 .ImagesPreview--imageContainer {
@@ -446,39 +440,43 @@ label {
   bottom: 0;
 }
 
-.enlarge-container {
-  position: absolute;
-  -webkit-transition: 0.4s all;
-  transition: 0.4s all;
-  z-index: -1;
-  max-width: 100%;
+.enlarge-preview {
   -o-object-fit: contain;
      object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
-.enlarge-preview {
-  position: absolute;
+#foreground {
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
-  z-index: -1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  max-width: 100%;
+  height: 100%;
+  width: auto;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  mix-blend-mode: luminosity;
+}
+
+#background {
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+  z-index: 2;
+  width: 100%;
+  mix-blend-mode: luminosity;
+  height: 100%;
+  position: relative;
+  right: -100%;
+}
+
+.background-image {
+  border: 2px solid yellow;
+}
+
+.foreground-iamge {
+  border: 2px solid blue;
 }
 
 .imageSelect-FilePreview {
@@ -592,32 +590,6 @@ label {
 .title-letter {
   -webkit-transform: scale(1.65, 2.5);
           transform: scale(1.65, 2.5);
-}
-
-#foreground {
-  -webkit-transition: 0.4s all;
-  transition: 0.4s all;
-  z-index: 2;
-  opacity: 0.5;
-  width: auto !important;
-}
-
-#background {
-  z-index: 1;
-  border: 2px solid white;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  z-index: 1;
-}
-
-.background-image {
-  -o-object-fit: none;
-     object-fit: none;
-  border: 2px solid yellow;
-}
-
-.foreground-iamge {
-  border: 2px solid blue;
 }
 
 @-webkit-keyframes move-right {
