--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -410,6 +410,8 @@ label {
       -ms-flex-align: center;
           align-items: center;
   max-width: 100%;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
 }
 
 .ImagesPreview--imageContainer {
@@ -440,15 +442,6 @@ label {
   bottom: 0;
 }
 
-.enlarge-preview {
-  -o-object-fit: contain;
-     object-fit: contain;
-  -o-object-position: center;
-     object-position: center;
-  width: 100%;
-  height: 100%;
-}
-
 #foreground {
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
@@ -464,19 +457,22 @@ label {
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
   z-index: 2;
-  width: 100%;
-  mix-blend-mode: luminosity;
+  width: auto;
   height: 100%;
-  position: relative;
+  position: absolute;
   right: -100%;
 }
 
 .background-image {
   border: 2px solid yellow;
+  height: 100%;
+  width: 100%;
 }
 
-.foreground-iamge {
+.foreground-image {
   border: 2px solid blue;
+  width: 100%;
+  height: 100%;
 }
 
 .imageSelect-FilePreview {
