--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -293,6 +293,7 @@ $background-color: rgb(77, 42, 13);
     display: flex;
     align-items: center;
     max-width: 100%;
+    transition: 0.4s all;
 }
 .ImagesPreview--imageContainer{
     display: flex;
@@ -320,10 +321,10 @@ $background-color: rgb(77, 42, 13);
     // width: 100%;
     // height: 100%;
     // object-fit: contain;
-    object-fit: contain;
-    object-position: center;
-    width: 100%;
-    height: 100%;
+    // object-fit: contain;
+    // object-position: center;
+    // width: 100%;
+    // height: 100%;
 }
 #foreground{
     transition: 0.4s all;
@@ -349,18 +350,21 @@ $background-color: rgb(77, 42, 13);
     // height: 100%;
     // opacity: 0;
     z-index: 2;
-    width: 100%;
-    mix-blend-mode: luminosity;
+    width: auto;
     height: 100%;
-    position: relative;
+    position: absolute;
     right: -100%;
 }
 .background-image{
     // object-fit: none;
     border: 2px solid yellow;
+    height: 100%;
+    width: 100%;
 }
-.foreground-iamge{
+.foreground-image{
     border: 2px solid blue;
+    width: 100%;
+    height: 100%;
 }
 .imageSelect-FilePreview{
 
