--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -334,7 +334,7 @@ $background-color: rgb(77, 42, 13);
     // width: 100%;
     // height: 100%;
     // opacity: 0;
-    height: 100%;
+    // height: 100%;
     width: auto;
     position: absolute;
     z-index: 2;
@@ -349,20 +349,20 @@ $background-color: rgb(77, 42, 13);
     // width: 100%;
     // height: 100%;
     // opacity: 0;
-    z-index: 2;
+    z-index: 1;
     width: auto;
-    height: 100%;
+    // height: 100%;
     position: absolute;
-    right: -100%;
+    // right: -100%;
 }
 .background-image{
     // object-fit: none;
-    border: 2px solid yellow;
+    // border: 2px solid yellow;
     height: 100%;
     width: 100%;
 }
 .foreground-image{
-    border: 2px solid blue;
+    // border: 2px solid blue;
     width: 100%;
     height: 100%;
 }
