--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -237,8 +237,10 @@ label{
 //------------
 //TAGS MENU
 //------------
-$frame-color: rgb(255, 141, 255);
-$background-color: rgb(77, 42, 13);
+$frame-color: rgb(53, 25, 8);
+// $frame-color: rgb(255, 141, 255);
+$background-color: white;
+// $background-color: rgb(77, 42, 13);
 
 .TagsMenu-container{
     width: 250px;
@@ -261,15 +263,22 @@ $background-color: rgb(77, 42, 13);
     font-weight: 600 !important;
     color: white !important;
 }
-.NavBar{
+.Navbar{
     background-color: $frame-color;
+    width: 4vw;
+    height: 100%;
+    position: relative;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    grid-column-start: 3;
 }
 
 .frontEndIndex-container{
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: min-content minmax(120px, 1fr) minmax(0, min-content) 75px;
+    grid-template-columns: min-content 1fr max-content;
     // border: 4vw solid $frame-color;
     border: 8px solid $frame-color;
     border-left: 0;
@@ -280,15 +289,30 @@ $background-color: rgb(77, 42, 13);
     overflow-y: auto;
     overflow-x: hidden;
     background-color: $background-color;
+    overflow-y: auto;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    display: flex;
+    flex-wrap: wrap;
+}
+#images{
+    display: grid;
+    grid-template-columns: minmax(120px, 1fr) max-content;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 .enlargeContainer{
-    grid-column-start: 3;
-    grid-column-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 3;
     grid-row-start: 1;
     height: 100%;
+    width: 100%;
     max-height: calc(100vh - 10px);
     width: 0;
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
     display: flex;
     align-items: center;
@@ -309,7 +333,7 @@ $background-color: rgb(77, 42, 13);
     cursor: pointer;
     position: sticky;
     top: 0;
-    bottom: 0;
+    // bottom: 0;
 }
 .enlarge-preview{
     // position: absolute;
@@ -328,43 +352,41 @@ $background-color: rgb(77, 42, 13);
 }
 #foreground{
     transition: 0.4s all;
-    // z-index: 2;
-    // opacity: 0.5;
-    // mix-blend-mode: luminosity;
-    // width: 100%;
-    // height: 100%;
-    // opacity: 0;
-    // height: 100%;
-    width: auto;
     position: absolute;
     z-index: 2;
     width: 100%;
     mix-blend-mode: luminosity;
+    max-height: 100%;
+    display: flex;
+
+justify-content: center;
+
+align-items: center;
 }
 #background{
     transition: 0.4s all;
-    // z-index: 2;
-    // opacity: 0.5;
-    // mix-blend-mode: luminosity;
-    // width: 100%;
-    // height: 100%;
-    // opacity: 0;
     z-index: 1;
-    width: auto;
-    // height: 100%;
+    width: 100%;
     position: absolute;
-    // right: -100%;
+    // height: 100%;
+    display: flex;
+
+justify-content: center;
+
+align-items: center;
 }
 .background-image{
     // object-fit: none;
     // border: 2px solid yellow;
     height: 100%;
     width: 100%;
+    max-height: 100%;
 }
 .foreground-image{
     // border: 2px solid blue;
     width: 100%;
     height: 100%;
+    max-height: 100%;
 }
 .imageSelect-FilePreview{
 
