--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -418,7 +418,7 @@ label {
   -ms-grid-column: 2;
       grid-column-start: 2;
   grid-column-end: 3;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -457,9 +457,8 @@ label {
   -ms-grid-row: 1;
       grid-row-start: 1;
   height: 100%;
-  width: 100%;
+  width: 1px;
   max-height: calc(100vh - 10px);
-  width: 0;
   overflow: hidden;
   position: relative;
   display: -webkit-box;
@@ -469,17 +468,15 @@ label {
       -ms-flex-align: center;
           align-items: center;
   max-width: 100%;
-  -webkit-transition: 2s all;
-  transition: 2s all;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
 }
 
 #foreground {
-  -webkit-transition: 2s all;
-  transition: 2s all;
   position: absolute;
   z-index: 2;
   width: 100%;
-  mix-blend-mode: luminosity;
+  opacity: 0.5;
   max-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -490,13 +487,23 @@ label {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 1px;
+  width: 1px;
+}
+
+.foreground-transition {
+  -webkit-transition: opacity 0.4s, -webkit-transform 0.4s;
+  transition: opacity 0.4s, -webkit-transform 0.4s;
+  transition: transform 0.4s, opacity 0.4s;
+  transition: transform 0.4s, opacity 0.4s, -webkit-transform 0.4s;
 }
 
 #background {
-  -webkit-transition: 2s all;
-  transition: 2s all;
+  -webkit-transition: 0.4s -webkit-transform;
+  transition: 0.4s -webkit-transform;
+  transition: 0.4s transform;
+  transition: 0.4s transform, 0.4s -webkit-transform;
   z-index: 1;
-  width: 100%;
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -507,6 +514,8 @@ label {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 1px;
+  width: 1px;
 }
 
 .background-image {
