--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -300,7 +300,7 @@ $background-color: white;
     grid-template-columns: minmax(120px, 1fr) max-content;
     grid-column-start: 2;
     grid-column-end: 3;
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -328,40 +328,47 @@ $background-color: white;
     grid-column-end: 3;
     grid-row-start: 1;
     height: 100%;
-    width: 100%;
+    // width: 100%;
+    width: 1px;
     max-height: calc(100vh - 10px);
-    width: 0;
     overflow: hidden;
     position: relative;
     display: flex;
     align-items: center;
     max-width: 100%;
-    transition: 2s all;
+    transition: 0.4s all;
 }
 #foreground{
-    transition: 2s all;
+    // transition: transform 2s, opacity 2s;
     position: absolute;
     z-index: 2;
     width: 100%;
-    mix-blend-mode: luminosity;
+    // mix-blend-mode: luminosity;
+    opacity: 0.5;
     max-height: 100%;
     display: flex;
-
-justify-content: center;
-
-align-items: center;
+    justify-content: center;
+    align-items: center;
+    height: 1px;
+    width: 1px;
+    // left: 50%;
+    // display: none;
+}
+.foreground-transition{
+    // opacity: 1 !important;
+    transition: transform 0.4s, opacity 0.4s;
 }
 #background{
-    transition: 2s all;
+    transition: 0.4s transform;
     z-index: 1;
-    width: 100%;
     position: absolute;
     // height: 100%;
     display: flex;
-
-justify-content: center;
-
-align-items: center;
+    justify-content: center;
+    align-items: center;
+    height: 1px;
+    width: 1px;
+    // left: 50%;
 }
 .background-image{
     // object-fit: none;
