--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -407,6 +407,7 @@ label {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  position: relative;
 }
 
 #images {
@@ -418,7 +419,7 @@ label {
   -ms-grid-column: 2;
       grid-column-start: 2;
   grid-column-end: 3;
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
 }
@@ -470,6 +471,8 @@ label {
   max-width: 100%;
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
+  -webkit-transform-origin: right;
+          transform-origin: right;
 }
 
 #foreground {
@@ -492,10 +495,8 @@ label {
 }
 
 .foreground-transition {
-  -webkit-transition: opacity 0.4s, -webkit-transform 0.4s;
-  transition: opacity 0.4s, -webkit-transform 0.4s;
-  transition: transform 0.4s, opacity 0.4s;
-  transition: transform 0.4s, opacity 0.4s, -webkit-transform 0.4s;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
 }
 
 #background {
