--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -294,13 +294,15 @@ $background-color: white;
     grid-column-end: 2;
     display: flex;
     flex-wrap: wrap;
+    position: relative;
+    // transition: all 0.4s;
 }
 #images{
     display: grid;
     grid-template-columns: minmax(120px, 1fr) max-content;
     grid-column-start: 2;
     grid-column-end: 3;
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
 }
@@ -337,6 +339,7 @@ $background-color: white;
     align-items: center;
     max-width: 100%;
     transition: 0.4s all;
+    transform-origin: right;
 }
 #foreground{
     // transition: transform 2s, opacity 2s;
@@ -356,7 +359,7 @@ $background-color: white;
 }
 .foreground-transition{
     // opacity: 1 !important;
-    transition: transform 0.4s, opacity 0.4s;
+    transition: 0.4s all;
 }
 #background{
     transition: 0.4s transform;
