--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -389,6 +389,7 @@ label {
       grid-template-columns: -webkit-min-content 1fr -webkit-max-content;
       grid-template-columns: min-content 1fr max-content;
   border: 8px solid #351908;
+  border-right: 0;
   border-left: 0;
   background-color: white;
   position: relative;
@@ -608,8 +609,8 @@ label {
 }
 
 .image-hide {
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(200%);
+          transform: translateY(200%);
 }
 
 .low-opacity {
