--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -281,6 +281,7 @@ $background-color: white;
     grid-template-columns: min-content 1fr max-content;
     // border: 4vw solid $frame-color;
     border: 8px solid $frame-color;
+    border-right: 0;
     border-left: 0;
     background-color: $background-color;
     position: relative;
@@ -433,7 +434,7 @@ $background-color: white;
 }
 
 .image-hide{
-    transform: translateY(100%);
+    transform: translateY(200%);
 }
 
 .low-opacity{
