--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -470,8 +470,8 @@ label {
       -ms-flex-align: center;
           align-items: center;
   max-width: 100%;
-  -webkit-transition: 4s all;
-  transition: 4s all;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
   -webkit-transform-origin: right;
           transform-origin: right;
 }
@@ -480,7 +480,7 @@ label {
   position: absolute;
   z-index: 2;
   width: 100%;
-  opacity: 0.5;
+  opacity: 1;
   max-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -491,20 +491,16 @@ label {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 1px;
-  width: 1px;
+  height: 100%;
+  width: 100%;
 }
 
 .foreground-transition {
-  -webkit-transition: 4s all;
-  transition: 4s all;
+  -webkit-transition: 0.4s all !important;
+  transition: 0.4s all !important;
 }
 
 #background {
-  -webkit-transition: 4s -webkit-transform;
-  transition: 4s -webkit-transform;
-  transition: 4s transform;
-  transition: 4s transform, 4s -webkit-transform;
   z-index: 1;
   position: absolute;
   display: -webkit-box;
@@ -516,8 +512,8 @@ label {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 1px;
-  width: 1px;
+  height: 100%;
+  width: 100%;
 }
 
 .background-image {
