--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -313,7 +313,7 @@ $background-color: white;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: 4s all;
+    transition: 0.4s all;
     transition: 0 opacity;
     z-index: 2;
     // max-width: 100%;
@@ -322,6 +322,7 @@ $background-color: white;
     cursor: pointer;
     position: sticky;
     top: 0;
+    flex: 1 1 150px;
     // bottom: 0;
 }
 .enlarge-preview{
@@ -341,6 +342,7 @@ $background-color: white;
     max-width: 100%;
     transition: 0.4s all;
     transform-origin: right;
+    transform: translateX(100%);
 }
 #foreground{
     // transition: transform 2s, opacity 2s;
@@ -392,13 +394,13 @@ $background-color: white;
 
     transition: 0.4s all;
     // z-index: -1;
-    max-width: 100%;
+    width: 100%;
     object-fit: contain;
     align-self: flex-end;
     transform-origin: bottom;
     transform: translateY(0);
-    transition: 0.2s all;
-    height: 100%;
+    transition: 0.4s all;
+    max-height: 200px;
 }
 .zero-width{
     height: 0;
