--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -735,12 +735,12 @@ label {
   position: absolute;
   left: 0;
   background-color: white;
-  bottom: -100%;
   height: 80%;
   width: 100%;
   z-index: 2;
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
+  bottom: -100%;
   opacity: 0;
 }
 
@@ -751,6 +751,8 @@ label {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50px;
           flex: 0 0 50px;
+  z-index: 11;
+  cursor: pointer;
 }
 
 .ArtworkInfo-preview {
