--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -88,9 +88,6 @@ Button{
     background-color: #ffffff;
     margin: 0 15px;
 }
-.dnd-listItem{
-
-}
 .dnd-list{
     list-style-type:none;
     display: flex;
@@ -325,8 +322,6 @@ $background-color: white;
     flex: 1 1 150px;
     // bottom: 0;
 }
-.enlarge-preview{
-}
 .enlargeContainer{
     grid-column-start: 2;
     grid-column-end: 3;
@@ -515,11 +510,11 @@ $background-color: white;
     position: absolute;
     left: 0;
     background-color: white;
-    bottom: -100%;
     height: 80%;
     width: 100%;
     z-index: 2;
     transition: 0.4s all;
+    bottom: -100%;
     opacity: 0;
 }
 .ArtworkInfo-preview-container{
@@ -527,6 +522,8 @@ $background-color: white;
     border: 1px solid;
     height: 100%;
     flex: 0 0 50px;
+    z-index: 11;
+    cursor: pointer;
 }
 .ArtworkInfo-preview{
     border: 1px solid;
