--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -400,27 +400,16 @@ label {
   overflow-x: hidden;
   background-color: white;
   overflow-y: auto;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
-  grid-column-end: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  position: relative;
+  position: absolute;
 }
 
 #images {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: minmax(120px, 1fr) max-content;
-      grid-template-columns: minmax(120px, 1fr) -webkit-max-content;
-      grid-template-columns: minmax(120px, 1fr) max-content;
-  -ms-grid-column: 2;
-      grid-column-start: 2;
-  grid-column-end: 3;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -456,16 +445,11 @@ label {
 }
 
 .enlargeContainer {
-  -ms-grid-column: 2;
-      grid-column-start: 2;
-  grid-column-end: 3;
-  -ms-grid-row: 1;
-      grid-row-start: 1;
   height: 100%;
   width: 1px;
   max-height: calc(100vh - 10px);
   overflow: hidden;
-  position: relative;
+  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -479,6 +463,7 @@ label {
           transform-origin: right;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
+  right: 0;
 }
 
 #foreground {
