--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -288,19 +288,13 @@ $background-color: white;
     overflow-x: hidden;
     background-color: $background-color;
     overflow-y: auto;
-    grid-column-start: 1;
-    grid-column-end: 2;
     display: flex;
     flex-wrap: wrap;
-    position: relative;
+    position: absolute;
     // transition: all 0.4s;
 }
 #images{
-    display: grid;
-    grid-template-columns: minmax(120px, 1fr) max-content;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -323,21 +317,18 @@ $background-color: white;
     // bottom: 0;
 }
 .enlargeContainer{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
     height: 100%;
-    // width: 100%;
     width: 1px;
     max-height: calc(100vh - 10px);
     overflow: hidden;
-    position: relative;
+    position: absolute;
     display: flex;
     align-items: center;
     max-width: 100%;
     transition: 0.4s all;
     transform-origin: right;
     transform: translateX(100%);
+    right: 0;
 }
 #foreground{
     // transition: transform 2s, opacity 2s;
