--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -284,6 +284,7 @@ $background-color: white;
     position: relative;
 }
 .imageSelect-container{
+    height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
     background-color: $background-color;
