--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -343,6 +343,41 @@ label {
   border: 1px solid #afafaf;
 }
 
+.Login-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  padding-top: 7%;
+}
+
+.Login-form {
+  display: 'flex';
+  -ms-flex-wrap: 'wrap';
+      flex-wrap: 'wrap';
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: '300px';
+}
+
+.Login-input {
+  padding-left: 5px;
+  margin-bottom: 5px;
+}
+
+.Login-button {
+  margin-top: 15px;
+}
+
 .TagsMenu-container {
   width: 250px;
   background-color: #351908;
@@ -369,6 +404,7 @@ label {
 }
 
 .Navbar {
+  overflow: hidden;
   background-color: #351908;
   width: 4vw;
   height: 100%;
@@ -378,6 +414,21 @@ label {
   z-index: 2;
   -ms-grid-column: 3;
       grid-column-start: 3;
+}
+
+#button-next, #button-prev {
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+
+.move-left {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+.move-right {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
 }
 
 .frontEndIndex-container {
@@ -445,6 +496,22 @@ label {
           flex: 1 1 150px;
 }
 
+.ImagesPreview--imageContainer__empty {
+  border: 2px solid red;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+  -webkit-transition: 0 opacity;
+  transition: 0 opacity;
+  overflow: hidden;
+  max-height: 200px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 150px;
+          flex: 1 1 150px;
+}
+
 .enlargeContainer {
   height: 100%;
   width: 1px;
@@ -458,10 +525,8 @@ label {
       -ms-flex-align: center;
           align-items: center;
   max-width: 100%;
-  -webkit-transition: 0.4s -webkit-transform;
-  transition: 0.4s -webkit-transform;
-  transition: 0.4s transform;
-  transition: 0.4s transform, 0.4s -webkit-transform;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
   -webkit-transform-origin: right;
           transform-origin: right;
   -webkit-transform: translateX(100%);
@@ -729,6 +794,9 @@ label {
   transition: 0.4s all;
   bottom: -100%;
   opacity: 0;
+  background-color: #351908;
+  color: white;
+  padding-left: 20px;
 }
 
 .ArtworkInfo-preview-container {
