--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -487,7 +487,6 @@ label {
   z-index: 2;
   overflow: hidden;
   max-height: 200px;
-  cursor: pointer;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -600,6 +599,7 @@ label {
           transform: translateY(0);
   transition: 0.4s all;
   max-height: 200px;
+  cursor: pointer;
 }
 
 .zero-width {
@@ -665,6 +665,7 @@ label {
 .image-hide {
   -webkit-transform: translateY(200%);
           transform: translateY(200%);
+  cursor: default;
 }
 
 .low-opacity {
@@ -830,5 +831,6 @@ label {
 
 .info-down {
   bottom: -100%;
+  cursor: default;
 }
 /*# sourceMappingURL=main.css.map */
