--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -86,6 +86,22 @@ form {
   margin: 0;
 }
 
+.EditDetail-container {
+  width: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 1px solid black;
+  margin: 2px 1px 0 1px;
+}
+
 p {
   margin: 0 !important;
   word-wrap: break-word;
